--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "graphql": "^15.5.2"
+    "bootstrap": "^5.1.0",
+    "graphql": "^15.5.2",
+    "react-bootstrap": "^2.0.0-beta.6"
   }
 }
